--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,9 @@
 body {
     font-family: 'Outfit', sans-serif;
     background-color: var(--Slate-300);
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
 h1 {
@@ -59,7 +62,5 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 812px;
-    margin-top: auto;
-    margin-bottom: auto;
+    height: 100vh;
 }
